css/style.css
@charset "utf-8";

@font-face {font-family: "Square721 BT Bold";
    src: url("//db.onlinewebfonts.com/t/71b14c7b971cf8d9493bbc5883cb158f.eot");
    src: url("//db.onlinewebfonts.com/t/71b14c7b971cf8d9493bbc5883cb158f.eot?#iefix") format("embedded-opentype"),
    url("//db.onlinewebfonts.com/t/71b14c7b971cf8d9493bbc5883cb158f.ttf") format("truetype");
}

html,
body {
  font-family: 'Roboto';
  font-weight: 400;
}

.light { font-weight: 300; }

.semi-bold { font-weight: 500; }

.no-padding { padding: 0; }

.no-overflow-x { overflow-x: hidden; }

.no-mtop { margin-top: 0; }

.no-mbot { margin-bottom: 0; }

.text-black { color: #000; }

.text-grey { color: #333 !important; }

.text-light-grey { color: #888; }

.off-white-bg { background-color: #eee; }

.affix {
  top: 23px;
  z-index: 10;
}

.quote-align {
  position: relative;
  top: 8rem;
  left: 10%;
  font-weight: 300;
}

.quote-align.more {
  top: 9rem;
  left: 7%;
}

.quote-align small {
  position: relative;
  top: 3rem;
  left: -5rem;
}

.text-white { color: #fff; }

.bg-black { background-color: #000; }

.bg-grey { background-color: #474747; }

.strip-shade {
  height: 32px;
  background: url(../images/hatch-bg.png);
}

.strip-shade.top { height: 36px; }

.strip-shade h1 {
  margin-top: -1px;
  margin-left: 16%;
  font-family: 'Square721 BT Bold';
  color: #767676;
  transform: scale(1.1,.6);
}

.transparent-bg {
  background-color: rgba(255,255,255,.3);
  box-shadow: 0 0 12px -3px #000;
}

.icon-bar { background-color: #000; }

.logo-pos {
  max-width: 67px;
  margin-top: -20px;
}

.navbar-toggle {
  position: absolute;
  top: 0;
  left: 6px;
  padding: 4px 0;
}

.navbar-custom > li > a {
  font-size: 20px;
  color: #333;
  text-shadow: none;
  transition: background 400ms ease;
}

.navbar-custom > li.active > a:before,
.navbar-custom > li > a:before {
  position: absolute;
  bottom: 0;
  left: 0;
  display: block;
  width: 0;
  height: 5px;
  content: '';
  transition: width 0 ease, background 400ms ease;
}

.navbar-custom > li.active > a:after,
.navbar-custom > li > a:after {
  position: absolute;
  right: 0;
  bottom: 0;
  display: block;
  width: 0;
  height: 5px;
  background: #e00000;
  content: '';
  transition: width 400ms ease;
}
.navbar-custom > li.active > a:before,
.navbar-custom > li > a:focus:before,
.navbar-custom > li > a:hover:before {
    width: 100%;
    background: #e00000;
    transition: width 400ms ease;
}
.navbar-custom > li.active > a:after,
.navbar-custom > li > a:focus:after,
.navbar-custom > li > a:hover:after {
    width: 100%;
    background: transparent;
    transition: all 0 ease;
}

.navbar-custom > li.active > a,
.navbar-custom > li > a:focus,
.navbar-custom > li > a:hover,
.confirm-book {
  color: #fff;
  background-color: #8d0000;
  transition: all 400ms ease;
}
.confirm-book:hover {
  color: #fff;
  background-color: #af0000;
}

#top-carousel .carousel-inner img { margin: 28px auto 0; }

.carousel-indicators.custom li {
  z-index: 2;
  width: 15px;
  height: 15px;
  margin: 1px 6px;
  background-color: #333;
  border: none;
  opacity: .7;
}

.carousel-indicators.custom li:hover { opacity: .9; }

.carousel-indicators.custom .active {
  width: 16px;
  height: 16px;
  margin: 0 6px;
  background-color: #fff;
  border: 5px solid #333;
  opacity: .6;
  transition: all 200ms;
}

.icon-prev.less { left: 30%; }

.icon-next.less { right: 30%; }

.btn.book-now {
  position: absolute;
  top: 46.5%;
  right: 12%;
  z-index: 2;
  background-color: rgba(0,0,0,.6);
  transition: top 200ms, bottom 200ms, left 200ms background-color 200ms;
}

.btn.book-now:hover,
.btn.book-now:focus { background-color: #ddd; }

.btn.book-now:hover a,
.btn.book-now:focus a,
.btn.book-now a:hover,
.btn.book-now a:focus {
  color: #333;
  text-decoration: none;
  outline: none;
}

.custom-underline {
  line-height: 1.5;
  color: #000;
  background: url(../images/heading-underline.png) no-repeat 50% 100%;
}

.custom-underline.white {
  color: #fff;
  background: url(../images/heading-underline-white.png) no-repeat 50% 100%;
}

.content-text {
  margin: 25px auto;
  font-size: 20px;
  text-align: center;
}

.radicality-bg {
  background: #fff url(../images/white-hatch-bg.png) no-repeat center;
  background-size: cover;
}

.radicality-bg p {
  margin: 15px auto;
  font-size: 20px;
}

.radicality-bg .text-grey {
  font-size: 16px;
  text-decoration: none !important;
  border-bottom: 1px solid #333;
}

.highlights-box .img-responsive { border-radius: 3px; }

.highlights-box.left {
  padding: 10px 0;
  margin-right: 4px;
}

.highlights-box.left .white-triangle {
  position: absolute;
  top: 10px;
  left: 0;
  border-left: 6.5rem solid #fff;
  border-bottom: 11.5rem solid transparent;
}

.highlights-box.right .white-triangle {
  position: absolute;
  right: 0;
  bottom: 0;
  border-right: 6.5rem solid #fff;
  border-top: 11.5rem solid transparent;
}

.highlights-box .carousel-caption {
  bottom: 0;
  padding: 0;
  color: #fff;
}

.highlights-box.left .carousel-caption {
  right: 12px;
  left: 0;
}

.highlights-box.right .carousel-caption {
  right: 0;
  left: 12px;
}

.highlights-box.right .shade-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(to top, rgba(0,0,0,.7) 10%, rgba(0,0,0,0) 70%);
}

.white-hatch-bg {
  background: #fff url(../images/white-hatch-bg.png) no-repeat center;
  background-size: cover;
}

.perseverance {
  padding-top: 35px;
  padding-bottom: 35px;
  background-color: #eee;
}

.perseverance img,
.concepts-showdown img {
  margin: 2px;
  cursor: pointer;
  border-radius: 3px;
}

.perseverance .pad-top {
  padding-top: 40px;
}

.perseverance .extra-left { margin-left: 6px; }

.p-bottom7rem { padding-bottom: 7rem; }

.p-bottom20rem { padding-bottom: 20rem; }

.concepts-showdown {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.pad-left-right { padding: 0 4px; }

.m-top10px { margin-top: 10px; }

.m-top36px { margin-top: 36px; }

.m-top5px { margin-top: 5px !important; }

.m-top9rem { margin-top: 9rem; }

.m-bot6rem { margin-bottom: 6rem; }

.custom-margin {
  margin-top: 2rem;
  margin-bottom: 5rem;
}

.m-right10px { margin-right: 10px; }

.pos-top-neg8px {
  position: relative;
  top: -8px;
}

.f-size20px { font-size: 20px; }

.f-size14px { font-size: 14px; }

.vision-strip {
  padding: 10px 15px;
  margin: 10px auto 10px;
  color: #fff;
  background: linear-gradient(right, #8d0000, #e00000);
  background: -webkit-linear-gradient(right, #8d0000, #e00000);
  background: -o-linear-gradient(right, #8d0000, #e00000);
  background: -moz-linear-gradient(right, #8d0000, #e00000);
  border-radius: 2px;
}

.vision-strip p { margin: auto !important; }

.img-absolute-center {
  position: absolute;
  top: -22rem;
  left: calc(50% - 9rem);
}

.profile-pic {
  padding: 10px;
  margin: 15px auto;
  cursor: pointer;
  border: 3px solid #0d47a1;
  border-radius: 100%;
}

.profile-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 17px;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: rgba(255,255,255,.7);
  border-radius: 100%;
  opacity: 0;
  transition: opacity 300ms;
}

.profile-pic.rotate { transform: rotate(40deg); }

.profile-pic:hover + .profile-overlay,
.profile-overlay:hover { opacity: 1; }

.profile-overlay a {
  display: flex;
  align-items: center;
  flex-grow: 1;
  text-decoration: none;
}

.profile-overlay i {
  padding: 10px 12px;
  border: 3px solid #0d47a1;
  border-radius: 100%;
}

.parallax-window {
  min-height: 45rem;
  background: transparent;
}

.parallax-window.less { min-height: 30rem; }

.flex-center {
  display: flex;
  align-items: center;
}

.flex-center h1 {
  width: 100%;
  font-size: 11rem;
  color: #fff;
}

.social-icons {
  display: inline-block;
  margin-right: 10px;
  font-size: 24px;
  color: #fff;
  transform: scale(1);
  transition: transform 300ms, color 200ms;
}

.social-icons:first-child { margin-left: 10px; }

.social-icons:focus,
.social-icons:hover {
  color: #999;
  text-decoration: none;
  transform: scale(1.2);
}

.subscribe {
  padding: 6px 25px;
  display: inline-block;
  color: #333;
  background-color: #b8b8b8;
}

.hr-line {
  height: 7px;
  background-color: #000;
}

#bookPopup .modal-content { background-color: rgba(255,255,255,.67); }

#bookPopup .modal-header,
#bookPopup .modal-footer { border: none; }

#bookPopup .close {
  text-shadow: none;
  opacity: 1;
}

.img-overlay {
  position: absolute;
  top: 2px;
  right: -2px;
  bottom: 2px;
  left: 2px;
  display: flex;
  align-items: center;
  color: #fff;
  background-color: rgba(0,0,0,.7);
  border-radius: 2px;
  cursor: pointer;
  opacity: 1;
  transition: opacity 500ms ease;
}

.img-overlay.first {
  top: 42px;
  right: 3px;
  bottom: 3px;
  left: -2px;
}

.img-overlay.second { top: 5px; }

.img-overlay.middle {
  right: 2px;
  left: 6px;
}

.img-overlay p {
  width: 100%;
  padding: 20px;
  font-size: 26px;
  text-align: center;
}

.concepts-showdown .second-col { margin-top: -5.1rem; }

.concepts-showdown .second-col img { margin-left: 7px; }

.disalign-right {
  float: right;
  margin-right: 26px;
}

.disalign-left { margin-left: -20px; }

.concepts-showdown .img-overlay {
  right: 13px;
  left: 17px;
}

.concepts-showdown .first { padding-top: 15px; }

.concepts-showdown .first .img-overlay { top: 17px; }

.concepts-showdown .second-col .img-overlay {
  right: 8px;
  left: 22px;
}

.perseverance img:hover + .img-overlay,
.img-overlay:hover { opacity: 0; }

@media only screen and (min-width: 768px) {
  .logo-pos { max-width: 77px; }

  #bookPopup .modal-dialog { margin: 5% auto; }

  .text-left-sm { text-align: left; }

  .text-right-sm { text-align: right; }
}

@media only screen and (min-width: 992px) {
  .logo-pos { margin-left: calc(100% - 5rem); }
}

@media only screen and (max-width: 767px) {
  .no-pad-xs { padding: 0; }

  .carousel-indicators.custom { bottom: 0; }

  .carousel-indicators.custom li {
    width: 12px;
    height: 12px;
    margin: 0 3px;
  }

  .carousel-indicators.custom .active {
    width: 13px;
    height: 13px;
    margin: 0 3px;
    border: 4px solid #fff;
  }

  .radicality-bg h1 { font-size: 24px; }

  .radicality-bg p { font-size: 17px; }

  .radicality-bg p span { font-size: 14px; }
}

@media only screen and (max-width: 600px) {
  .strip-shade h1 {
    margin-top: 4px;
    margin-left: 21%;
    font-size: 28px;
    transform: scale(1,.6);
  }

  .btn.book-now { font-size: 11px; }
}

